more use of 1.5 features, logging stacktrace if exceptions happen which should never happen
git-svn-id: https://scm.mmbase.org/mmbase/trunk@21909 91430c5f-d668-0410-9e7d-dd663366dcfd